--- a/templates/organizations/register.html
+++ b/templates/organizations/register.html
@@ -39,6 +39,10 @@
                   <input type="email" name="email" class="form-control" required>
                 </div>
                 <div class="form-group">
+                  <label for="phone">Phone</label>
+                  <input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" class="form-control" required>
+                </div>
+                <div class="form-group">
                   <label for="password2">Password</label>
                   <input type="password" name="password" class="form-control" required>
                 </div>
