--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -3,17 +3,12 @@
 {% block title %} | User Dashboard {% endblock %}
 
 {% block content %}
-<section id="showcase-inner" class="py-5">
-        <div class="container">
-          <div class="row text-center">
-            <div class="col-md-12">
-              <h1 class="display-4">User Dashboard</h1>
-              <p class="lead">Manage your TimeSheet account</p>
-            </div>
-          </div>
-        </div>
-      </section>
 
+<script type="text/javascript">
+function refreshWithNewPeriod() {
+  window.location.href = window.location.href.split("?")[0] + "?period_id=" + document.getElementById("period_select").value
+}
+</script>
       <!-- Breadcrumb -->
       <section id="bc" class="mt-3">
         <div class="container">
@@ -36,7 +31,19 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
+              {% if periods %}
+              <select id="period_select" class="form-control" onchange="refreshWithNewPeriod()">
+                {% for p in periods %}
+                {% if selected_period == p.id%}
+                <option value="{{ p.id }}" selected>{{p.date_start}}-{{p.date_end}}</option>
+                {% else %}
+                <option value="{{ p.id }}">{{p.date_start}}-{{p.date_end}}</option>
+                {% endif %}
+                {% endfor %}
+              </select>
+              {% endif %}
               <h2>Welcome {{ user.first_name }}</h2>
+
               <div>
               <button class="btn-primary btn-block btn-lg" data-toggle="modal" style="float: right; width:200px;" data-target="#inquiryModal">Add Time</button>
               </div>
