Implemented timesheet entries update, delete with confirmation modal.

--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -8,6 +8,42 @@
 function refreshWithNewPeriod() {
   window.location.href = window.location.href.split("?")[0] + "?period_id=" + document.getElementById("period_select").value
 }
+
+function tableRowClicked(e) {
+  row=document.getElementById("tsEntriesTable").rows[e.rowIndex];
+  var time_in = new Date(Date.parse(row.cells[0].innerHTML));
+  var time_out = new Date(Date.parse(row.cells[1].innerHTML));
+  document.getElementById("date_time_in").value=dateTimeToString(time_in);
+  document.getElementById("date_time_out").value=dateTimeToString(time_out);
+  document.getElementById("duration").value=row.cells[2].innerHTML;
+  document.getElementById("notes").value=row.cells[5].innerHTML;
+  document.getElementById("id").value=row.cells[6].innerHTML;
+  $('#inquiryModal').modal('show');
+  $('#submitBtn').val("Update")
+}
+function dateTimeToString(date) {
+    return date.getFullYear()+'-'+ (date.getMonth()+1) +'-'+date.getDate()+'T'+date.getHours()+':'+ (date.getMinutes()<10?'0':'') + date.getMinutes();
+
+}
+</script>
+<script>
+  $(document).ready(function(){
+    $("#addBtn").on('click',function(){
+      $('#id').val(0);
+      $('#date_time_in').val(null);
+      $('#date_time_out').val(null);
+      $('#duration').val(null);
+      $('#notes').val('');
+      $('#inquiryModal').modal('show');
+      $('#submitBtn').val("Add");
+    });
+    $("#deleteBtn").on('click',function(){
+      $("#delete_entry_id").val($('#id').val());
+      $("#confirmForm").attr("action",$("#confirmForm").attr("action")+'timesheetentries/')
+      $("#confirmMessage").html("Are you sure you want to delete the entry "+$('#delete_entry_id').val());
+      $('#confirmModal').modal('show');
+    });
+  });
 </script>
       <!-- Breadcrumb -->
       <section id="bc" class="mt-3">
@@ -45,7 +81,8 @@ function refreshWithNewPeriod() {
               <h2>Welcome {{ user.first_name }}</h2>
 
               <div>
-              <button class="btn-primary btn-block btn-lg" data-toggle="modal" style="float: right; width:200px;" data-target="#inquiryModal">Add Time</button>
+              <!--<button class="btn-primary btn-block btn-lg" data-toggle="modal" style="float: right; width:200px;" data-target="#inquiryModal">Add Time</button> -->
+              <button id="addBtn" class="btn-primary btn-block btn-lg" style="float: right; width:200px;">Add Time</button>
               </div>
               <!-- Time Sheet Model -->
               <div class="modal fade" id="inquiryModal" role="dialog">
@@ -65,67 +102,68 @@ function refreshWithNewPeriod() {
                         {% else %}
                           <input type="hidden" name="emp_id" value="0">
                         {% endif %}
+                          <input type="hidden" id="id" name="id" value="0"
                         <div class="form-group">
                           <label for="emp_name" class="col-form-label">Name:</label>
                           <input type="text" name="emp_name" class="form-control" {% if user.is_authenticated %} value="{{ user.first_name}} {{ user.last_name}}" {% endif %} required>
                         </div>
                         <div class="form-group">
                           <label for="date_time_in" class="col-form-label">DateTime IN:</label>
-                          <input type="datetime-local" name="date_time_in" class="form-control" value="">
+                          <input id="date_time_in" type="datetime-local" name="date_time_in" class="form-control" value="">
                         </div>
                         <div class="form-group">
                           <label for="date_time_out" class="col-form-label">DateTime OUT:</label>
-                          <input type="datetime-local" name="date_time_out" class="form-control" value="">
+                          <input id="date_time_out" type="datetime-local" name="date_time_out" class="form-control" value="">
                         </div>
                         <div class="form-group">
                           <label for="duration" class="col-form-label">Duration:</label>
-                          <input type="number" name="duration" class="form-control">
-                        </div>
-                        <div class="form-group">
-                          <label for="hourly_rate" class="col-form-label">$/Hr:</label>
-                          <input type="number" name="hourly_rate" class="form-control">
+                          <input id='duration' type="number" name="duration" class="form-control">
                         </div>
                         <div class="form-group">
                           <label for="notes" class="col-form-label">Entry Notes</label>
-                          <textarea name="notes" rows="2" cols="80" class="form-control"></textarea>
+                          <textarea id='notes' name="notes" rows="2" cols="80" class="form-control"></textarea>
                         </div>
                         <hr>
-                        <input type="submit" value="Add" class="btn btn-block btn-secondary">
+                        <input type="submit" value="Add" class="btn btn-block btn-secondary" id="submitBtn" name="addOrUpdateBtn">
+                        <input type="button" value="Delete" class="btn btn-block btn-secondary" id="deleteBtn">
                       </form>
                     </div>
                   </div>
                 </div>
               </div>
+              {% include 'partials/_confirm.html' %}
               {% if time_entries %}
               <p>Here are your time sheet entries</p>
-              <table class="table">
-                <thead>
+
+              <table class="table" id="tsEntriesTable">
+
                   <tr>
                     <th scope="col">IN</th>
                     <th scope="col">OUT</th>
                     <th scope="col">Duration</th>
-                    <th scope="col">$/HR</th>
-                    <th scope="col">SALARY($)</th>
+                    <th scope="col">Pay</th>
                     <th scope="col">APPROVED</th>
                     <th scope="col">Notes</th>
                     <th></th>
                   </tr>
-                </thead>
-                <tbody>
+
+
                   {% load test %}
+
                   {% for emp in time_entries %}
-                  <tr>
-                    <td>{{ emp.date_time_in }}</td>
-                    <td>{{ emp.date_time_out }}</td>
+                  <tr onclick="tableRowClicked(this)">
+                    <td>{{ emp.date_time_in|date:'m-d-Y H:i' }}</td>
+                    <td>{{ emp.date_time_out|date:'m-d-Y H:i' }}</td>
                     <td>{{ emp.duration }}</td>
-                    <td>{{ emp.user.hourly_rate }}</td>
                     <td>{{ emp.user.hourly_rate | multiply:emp.duration }}</td>
                     <td>{{ emp.is_approved }}</td>
                     <td>{{ emp.notes}}</td>
+                    <td style="visibility:hidden;">{{ emp.id }}</td>
                   </tr>
                   {% endfor %}
-                </tbody>
+
               </table>
+
               {% else %}
                 <p>You have not made any inquiries</p>
               {% endif %}
@@ -133,4 +171,5 @@ function refreshWithNewPeriod() {
           </div>
         </div>
       </section>
+
 {% endblock %}
