added code that allows for timesheetentry and timesheetperiod approvals based on group settings

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -3,7 +3,7 @@
 
 {% block branding %}
  <h1 id="head">
-    <a class="navbar-brand" href="{% url 'index' %}"><b>GT</b></a> TimeSheetApp Admin Area
+    <a class="navbar-brand" href="{% url 'index' %}"><b>Teknovention</b></a> TimeSheetApp Admin Area
  </h1>
 {% endblock %}
 
