--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -31,16 +31,12 @@
                   <input type="text" name="username" class="form-control" required>
                 </div>
                 <div class="form-group">
-                  <label for="employee_id">Employee ID</label>
-                  <input type="text" name="employee_id" class="form-control" required>
-                </div>
-                <div class="form-group">
                   <label for="email">Email</label>
                   <input type="email" name="email" class="form-control" required>
                 </div>
                 <div class="form-group">
                   <label for="phone">Phone</label>
-                  <input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" class="form-control" required>
+                  <input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" class="form-control">
                 </div>
                 <div class="form-group">
                   <label for="password2">Password</label>
