--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -4,6 +4,36 @@
 
 {% block content %}
 
+<script type="text/javascript">
+
+  $(document).ready(function(){
+    $('#registration-form').bootstrapValidator({
+      fields: {
+        password: {
+          validators: {
+            notEmpty: {
+              message: 'The password is required'
+            }
+          }
+        },
+        password2: {
+          validators: {
+            notEmpty: {
+              message: 'The confirm password is required'
+            },
+            identical: {
+              field: 'password',
+              message: 'The password and confirm password do not match'
+            }
+          }
+        }
+      }
+    });
+
+  });
+
+</script>
+
 <section id="register" class="bg-light py-5">
     <div class="container">
       <div class="row">
@@ -16,7 +46,7 @@
             <div class="card-body">
               <!-- Alerts -->
               {% include 'partials/_alerts.html' %}
-                <form action="{% url 'register' %}" method="POST">
+                <form id="registration-form" action="{% url 'register' %}" method="POST">
                     {% csrf_token %}
                   <div class="form-group">
                   <label for="first_name">First Name</label>
@@ -36,19 +66,19 @@
                 </div>
                 <div class="form-group">
                   <label for="phone">Phone</label>
-                  <input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" class="form-control">
+                  <input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" class="form-control">
                 </div>
                 <div class="form-group">
-                  <label for="password2">Password</label>
-                  <input type="password" name="password" class="form-control" required>
+                  <label for="password">Password</label>
+                  <input type="password" name="password" id="password" class="form-control" data-bv-notempty-message="Password cannot be empty" required>
                 </div>
                 <div class="form-group">
-                  <label for="password">Confirm Password</label>
-                  <input type="password" name="password2" class="form-control" required>
+                  <label for="password2">Confirm Password</label>
+                  <input type="password" name="password2" id="password2" class="form-control" required>
                 </div>
                 <div class="form-group">
                   <label for="organization">Organization</label>
-                  <select class="form-control" name="">
+                  <select class="form-control" name="org_id">
                     {% for org in organizations %}
 
                     <option value="{{org.id}}">
