--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
           <li>You must be a member of an organization to use this app</li>
           <li>Once registered you will receive an email when you have been approved by the organization</li>
           <li>You can start using the system once you receive the approval email</li>
-          <li><a href="https://docs.google.com/document/d/e/2PACX-1vT4vrteqqQE96hToTMwgzHdVpmPa94FeUk8jtwSCOPw-qkjy2UCPzoLuxCECQ8-kZEtzHAp3XqsP5qZ/pub" target="_blank">Help Registering</a></li>
+          <li><a href="https://docs.google.com/document/d/e/2PACX-1vT4vrteqqQE96hToTMwgzHdVpmPa94FeUk8jtwSCOPw-qkjy2UCPzoLuxCECQ8-kZEtzHAp3XqsP5qZ/pub" target="_blank">Help Registering and Logging In</a></li>
       </ul>
     </div>
 
