--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -121,7 +121,7 @@ function getHoursBetweenDates(start, end) {
                 <div class="modal-dialog">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="inquiryModalLabel">Timesheed Entry</h5>
+                      <h5 class="modal-title" id="inquiryModalLabel">Timesheet Entry</h5>
                       <button type="button" class="close" data-dismiss="modal">
                         <span>&times;</span>
                       </button>
